Prevent expanded search box from wrapping onto the next line.

--- a/app/assets/stylesheets/vault_navbar.scss
+++ b/app/assets/stylesheets/vault_navbar.scss
@@ -163,6 +163,7 @@ search {
   // Search form
   .input-group {
     height: 37.5px;
+    flex-wrap: nowrap;
 
     // Autocomplete for collection titles
     .twitter-typeahead,
